# ticket-to-ride-simulation

./: .gitignore  CMakeLists.txt  Makefile  README.md  simulate.cpp
include/algo/: path_possible.hpp  route_payment_options.hpp  shortest_path.hpp  shortest_path_dijkstra.hpp  steiner_forest.hpp  train_car_card_matches_route_colour.hpp
include/core/: destination_ticket_card.hpp  destination_ticket_card_deck.hpp  game.hpp  game_initialiser.hpp  map.hpp  player_colour.hpp  player_state.hpp  route_colour.hpp  train_car_card.hpp  train_car_card_deck.hpp  train_car_card_hand.hpp
include/eval/: completed_destination_tickets.hpp  completed_routes.hpp  european_express_bonus.hpp  player_report.hpp
include/gui/: game_state_renderer.hpp  gui.hpp
include/strat/: player_strategy.forward.hpp  player_strategy.hpp
include/turn/: build_train_station_decision.hpp  claim_route_decision.hpp  draw_destination_tickets_decision.hpp  draw_train_car_cards_decision.hpp  turn_decision.hpp
include/util/: async_generator.hpp  async_reader.hpp  rng.hpp
src/algo/: path_possible.cpp  route_payment_options.cpp  shortest_path.cpp  shortest_path_dijkstra.cpp  steiner_forest.cpp  train_car_card_matches_route_colour.cpp
src/core/: destination_ticket_card_deck.cpp  game.cpp  game_initialiser.cpp  map.cpp  player_state.cpp  route_colour.cpp  train_car_card.cpp  train_car_card_deck.cpp  train_car_card_hand.cpp
src/eval/: completed_destination_tickets.cpp  completed_routes.cpp  european_express_bonus.cpp
src/gui/: game_state_renderer.cpp  gui.cpp
src/util/: async_reader.cpp  (+1 more)
test/: test.cpp
(+52 files in other folders)
